# ayto_be-next

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PITCH_DECK.md  README.md  conftest.py  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
dev/: app.json  package-lock.json  package.json
output/: inference_report.txt
