[project]
name = "ayto"
version = "0.1.0"
description = "SportIQ — Professional-grade sports analytics from any smartphone"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["packages/cv-core/tests", "packages/pose-biomechanics/tests", "packages/ml-models/tests"]
python_files = "test_*.py"
python_functions = "test_*"
